# xray-cfg

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  add_domain.sh  common.sh  config.json  config_base.json  proxies.conf  pyproject.toml  remove_domain.sh  secrets.ejson  secrets.json  setup_linux.sh  test.sh  update_geodata.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
linux/: add_domain.sh  ci.sh  common.sh  doctor.sh  flush_dns.sh  generate_config.sh  logs.sh  remove_domain.sh  setup.sh  status.sh  teardown.sh  test.sh  tun-down.sh  tun-up.sh  update_geodata.sh
macos/: add_domain.sh  ci.sh  common.sh  cycle.sh  flush_dns.sh  generate_config.sh  logs.sh  remove_domain.sh  rotate_logs.sh  setup.sh  status.sh  teardown.sh  test.sh  update_geodata.sh
macos/plists/: com.proxies-cfg.geodata.plist  com.proxies-cfg.singbox.plist  com.xray-cfg.geodata.plist  com.xray-cfg.logrotate.plist  com.xray-cfg.singbox.plist  com.xray-cfg.xray.plist
shared/: add_domain.sh  build_config.py  ci_core.sh  common.sh  config_transform.py  constants.ps1  constants.sh  doctor_core.sh  generate_config.sh  geo_convert.py  geodata_urls.ps1  geodata_urls.sh  install_singbox.sh  proxies_conf.py  remove_domain.sh  singbox-tun.json  sub_parse.py  test_core.sh  test_urls.ps1  test_urls.sh  update_geodata_core.sh
windows/: add_domain.ps1  ci.ps1  common.ps1  cycle.ps1  doctor.ps1  flush_dns.ps1  generate_config.ps1  logs.ps1  remove_domain.ps1  rotate_logs.ps1  setup.ps1  singbox-tun.json  status.ps1  teardown.ps1  test.ps1  update_geodata.ps1
windows/v2rayn/: README.md
(+1 files in other folders)
